# semiotic_tricks_data_loader

./: pyproject.toml
