[tool.poetry]
name = "semiotic-tricks-data-loader"
version = "0.0.1"
description = ""
authors = ["Denis Shchtskyi <denis.shchutskyi@branderstudio.com>"]
readme = "README.md"
packages = [{include = "semiotic_tricks_data_loader"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
